# codebase-analyst

./: .env.example  .gitignore  BUGFIX_v1.1.1.md  BUGFIX_v1.1.8.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  FEATURE_OVERWRITE_PROTECTION.md  FIXES.md  INSTALL.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.1.8.md  TECHNICAL_SUMMARY_v1.1.8.md  UPDATE_SUMMARY.md  WHATS_NEW_v1.1.8.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_overwrite.sh
codebase_analyst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: __init__.py  agent.py  cli.py  prompts.py  summarization.py  system_prompt.md  token_rate_limiter.py  tools.py
src/prompts/: system_prompt_v1.1.2.md  system_prompt_v1.1.5.md
